--- a/src/Task1.html
+++ b/src/Task1.html
@@ -12,7 +12,7 @@
             <li>fish</li>
             <li>bird</li>          
         </ul>
-        <img src ="lib/12513.png" alt= "cool-dino" >
+        <img src ="../static/IMG/12513.png" alt= "cool-dino" >
         <div>
             <a href = "https://www.op.ac.nz/" target ="_blank"> Otago Polytechnic</a>
         </div>       
