added notes to task1 for sba

--- a/src/Task1.html
+++ b/src/Task1.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
+<script>
+/* import { onMount } from "svelte";
 
+let avengers = [];
+onMount(async () => {
+  const res = await fetch(
+    "https://gist.githubusercontent.com/dfenders/0fe9021b4242d83d973ac7087287e166/raw/8c0bda392b0381cfd254b719360e177fdf98b1ab/firstNames.json"
+  );
+  const names = await res.json();
+  console.log(names); 
+}); */
+</script>
     <body>
         <style>
             
